# testing_python_selenium

./: .azure-pipelines.yml  .flake8  .gitignore  .pre-commit-config.yaml  Estructura del proyecto  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  setup_project.ps1  testing_python_selenium.code-workspace
.azure-pipelines/: azure-marks-pipelines.yml  pip-install.yml  run-tests.yml  validate-tests.yml
config/: driver_manager.py  environments.yaml
pages/: base_page.py  google.py
src/adapters/: selenium_adapter.py  wait_manager.py
src/config/: driver_manager.py  environments.yaml
src/data/: test-data.yaml
src/drivers/downloads/: test-output-teport-sdqwerdq-qwedq.xls
src/framework/pages/: demoblazePage.py
src/framework/ports/: ui_port.py
src/framework/utilities/: configuration.py  logger.py
src/pages/: base_page.py  demoblazePage.py
src/tests/: conftest.py
src/tests/demoblaze/: test_demoblaze.py
src/utils/: logger.py  wait_utils.py
tests/: conftest.py
tests/google/: test_google.py
utils/: config.py  logger.py  wait_utils.py
